--- a/index.html
+++ b/index.html
@@ -9,10 +9,22 @@
 </head>
 <body class="bg-gray-900 flex items-center justify-center min-h-screen">
 
-    <div class="bg-white rounded-lg shadow-lg p-8 max-w-sm text-center">
-        <h1 class="text-3xl font-bold text-gray-800 mb-4">Your Name</h1>
-        <p class="text-lg text-gray-600 mb-4">Software Developer</p>
+    <div class="bg-white rounded-lg shadow-lg p-8 max-w-md text-center">
+        <h1 class="text-3xl font-bold text-gray-800 mb-4">HavenDV</h1>
+        <p class="text-lg text-gray-600 mb-6">Software Developer</p>
 
+        <!-- Experience Section -->
+        <div class="text-left mb-6">
+            <ul class="text-gray-800 list-disc list-inside space-y-2">
+                <li><strong>10 years</strong> in .NET - Backend, desktop, mobile, WASM</li>
+                <li><strong>2 years</strong> in management</li>
+                <li>Attempted to create a startup to convert Issues to PRs using LLMs</li>
+                <li>Created a .NET SDKs generator based on the OpenAPI specification</li>
+                <li>Supports <strong>30+ AI SDKs</strong> for .NET, easing LangChain.NET support</li>
+            </ul>
+        </div>
+
+        <!-- Links Section -->
         <div class="flex justify-center space-x-4 mb-6">
             <a href="https://github.com/HavenDV" target="_blank" class="text-gray-800 hover:text-blue-500">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 24 24" fill="currentColor">
@@ -20,20 +32,26 @@
                 </svg>
             </a>
 
-            <a href="https://linkedin.com/in/HavenDV" target="_blank" class="text-gray-800 hover:text-blue-500">
+            <a href="https://linkedin.com/in/havendv" target="_blank" class="text-gray-800 hover:text-blue-500">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 24 24" fill="currentColor">
                     <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.761 0 5-2.239 5-5v-14c0-2.761-2.239-5-5-5zm-11 19h-3v-9h3v9zm-1.5-10.216c-.966 0-1.75-.784-1.75-1.75s.784-1.75 1.75-1.75 1.75.784 1.75 1.75-.784 1.75-1.75 1.75zm13.5 10.216h-3v-4.798c0-1.144-.021-2.615-1.593-2.615-1.594 0-1.839 1.246-1.839 2.532v4.881h-3v-9h2.839v1.229h.04c.395-.747 1.359-1.534 2.799-1.534 2.994 0 3.548 1.971 3.548 4.531v4.774z"/>
                 </svg>
             </a>
 
-            <a href="mailto:youremail@example.com" class="text-gray-800 hover:text-blue-500">
+            <a href="https://t.me/havendv" target="_blank" class="text-gray-800 hover:text-blue-500">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 24 24" fill="currentColor">
+                    <path d="M9.991 17.27l-1.62 5.053c-.24.747-.443.882-.894.91-.435.025-.728-.14-1.008-.308l-3.055-2.43c-.86-.673-1.408-1.07-1.194-1.58l7.67-8.26c.355-.438.637-.627 1.087-.627.437 0 .818.19 1.198.526l4.416 3.764c1.27 1.08 2.052 1.545 2.156 2.216.099.65-.6 1.178-2.02 2.11l-8.244 5.185z"/>
+                </svg>
+            </a>
+
+            <a href="mailto:havendv@gmail.com" class="text-gray-800 hover:text-blue-500">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 24 24" fill="currentColor">
                     <path d="M12 13.5l-11-7.499v13.999c0 .553.447 1 .999 1h20.002c.552 0 .999-.447.999-1v-13.999l-11 7.499zm11-10.5c0-.553-.447-1-1-1h-20c-.552 0-1 .447-1 1v.217l11 7.498 11-7.498v-.217z"/>
                 </svg>
             </a>
         </div>
 
-        <p class="text-sm text-gray-500">© 2024 Your Name</p>
+        <p class="text-sm text-gray-500">© 2024 HavenDV</p>
     </div>
 
 </body>
