--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <ul class="text-gray-800 list-disc list-inside space-y-2">
                 <li><strong>10 years</strong> in .NET - Backend, desktop, mobile, WASM</li>
                 <li><strong>2 years</strong> in management</li>
+                <li>Leads and maintains the <strong>LangChain.NET</strong> project</li>
                 <li>Attempted to create a startup to convert Issues to PRs using LLMs</li>
                 <li>Created a .NET SDKs generator based on the OpenAPI specification</li>
                 <li>Supports <strong>30+ AI SDKs</strong> for .NET, easing LangChain.NET support</li>
