--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="bg-gray-900 flex items-center justify-center min-h-screen">
 
     <div class="bg-white rounded-lg shadow-lg p-8 max-w-md text-center">
-        <h1 class="text-3xl font-bold text-gray-800 mb-4">HavenDV</h1>
+        <h1 class="text-3xl font-bold text-gray-800 mb-4">Konstantin Stukov</h1>
         <p class="text-lg text-gray-600 mb-6">Software Developer</p>
 
         <!-- Experience Section -->
