--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body class="bg-gray-900 flex items-center justify-center min-h-screen">
 
     <div class="bg-white rounded-lg shadow-lg p-8 max-w-md text-center">
+        <!-- Profile Image -->
+        <img src="https://avatars.githubusercontent.com/u/3002068?v=4" alt="Profile Image" class="w-32 h-32 rounded-full mx-auto mb-4">
+
         <h1 class="text-3xl font-bold text-gray-800 mb-4">Konstantin Stukov</h1>
         <p class="text-lg text-gray-600 mb-6">Software Developer</p>
 
